# homework3.10

homework3.10.1/: CMakeLists.txt
homework3.10.1/homework3.10.1/: CMakeLists.txt  homework3.10.1.cpp  homework3.10.1.h
homework3.10.2/: CMakeLists.txt
homework3.10.2/homework3.10.2/: CMakeLists.txt  homework3.10.2.cpp  homework3.10.2.h
homework3.10.2/homework3.10.2/Debug/: vc143.idb
homework3.10.2/homework3.10.2/Debug/homework3.10.2.tlog/: CL.command.1.tlog  homework3.10.2.lastbuildstate
